# arducam-driver-zephyr

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  arducam_mega.c  arducam_mega.h  west.yml
.github/workflows/: lint.yml
driver/: CMakeLists.txt  Kconfig
driver/arducam-mega/: CMakeLists.txt  Kconfig  arducam_mega.c  arducam_mega.h
drivers/arducam/: CMakeLists.txt  Kconfig  arducam.c  arducam.h
dts/bindings/: arducam,mega.yaml  vendor-prefixes.txt
dts/bindings/video/: arducam,mega.yaml
example/simple/: CMakeLists.txt
example/simple/src/: main.c
examples/: CMakeLists.txt
examples/sd/: CMakeLists.txt  Kconfig  prj.conf
examples/sd/boards/: esp32_feather.overlay  rpi_pico.overlay
examples/sd/lib/: camera.c  camera.h  sd.c  sd.h
examples/sd/src/: main.c
examples/serial/: CMakeLists.txt
examples/serial/boards/: rpi_pico.overlay
examples/serial/src/: arducam_link.c  main.c
examples/simple/: prj.conf
examples/simple/boards/: rpi_pico.overlay
examples/simple/src/: arducam_link.h
